--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,18 +8,24 @@
 </head>
 <body>
 
-    <header class="navbar">
-        <div class="container nav-flex">
-            <div class="logo">Tech<span>2049</span></div>
-            <nav>
-                <ul>
-                    <li><a href="/">خانه</a></li>
-                    <li><a href="/posts">مقالات</a></li>
-                    <li><a href="/about">درباره ما</a></li>
-                </ul>
-            </nav>
+    <header class="glass-navbar" id="navbar">
+    <div class="nav-container">
+        <nav class="nav-menu">
+            <a href="#">خانه</a>
+            <a href="#">مقالات</a>
+            <a href="#">درباره</a>
+        </nav>
+
+        <div class="nav-logo">
+            Tech2049
         </div>
-    </header>
+
+        <nav class="nav-menu right">
+            <a href="#">گیتهاب</a>
+            <a href="#">تماس</a>
+        </nav>
+    </div>
+</header>
 
     <main class="container main-grid">
         
