--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,11 @@
 
     <header class="glass-navbar" id="navbar">
     <div class="nav-container">
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav class="nav-menu">
             <a href="#">خانه</a>
             <a href="#">مقالات</a>
@@ -22,11 +27,12 @@
         </div>
 
         <nav class="nav-menu right">
-            <a href="#">گیتهاب</a>
+            <a href="#">گیت هاب</a>
             <a href="#">تماس</a>
         </nav>
     </div>
     </header>
+    <div class="overlay" id="overlay"></div>
 
 <main class="main-layout">
     <section class="post-grid">
