--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,29 +9,25 @@
 
 <body>
 
-    <header class="glass-navbar" id="navbar">
+    <header class="glass-navbar">
     <div class="nav-container">
         <div class="hamburger" id="hamburger">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <nav class="nav-menu">
+
+        <nav class="nav-menu" id="nav-menu">
             <a href="#">خانه</a>
             <a href="#">مقالات</a>
-            <a href="#">درباره</a>
+            <a href="#">درباره ما</a>
         </nav>
 
-        <div class="nav-logo">
-            Tech2049
-        </div>
-
-        <nav class="nav-menu right">
-            <a href="#">گیت هاب</a>
-            <a href="#">تماس</a>
-        </nav>
+        <div class="nav-logo">Tech2049</div>
     </div>
-    </header>
+</header>
+
+<div class="overlay" id="overlay"></div>
     <div class="overlay" id="overlay"></div>
 
 <main class="main-layout">
