--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,7 +40,7 @@
             {{ else }}
                 <div class="placeholder-img">Tech2049</div>
             {{ end }}
-            <div class="post-date">{{ .Date.Format "02 Jan 2026" }}</div>
+            <div class="post-date">{{ .Date.Format "2024 04 11" }}</div>
         </div>
         <div class="post-content">
             <h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
